2013-12-06  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* BrowserSelection.h:
	* X3DBrowserEditor.cpp:
	* BrowserSelection.cpp: 

2013-12-05  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.ui:
	* BrowserWindow.cpp:
	* X3DBrowserSelection.cpp:
	* X3DBrowserWindowInterface.cpp: 

2013-12-04  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserWidget.cpp:
	* X3DBrowserEditor.cpp:
	* MaterialEditor.cpp:
	* NodePropertiesEditor.h:
	* NodePropertiesEditor.cpp: 

2013-12-04  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserWidget.cpp:
	* X3DBrowserEditor.cpp:
	* X3DBrowserSelection.h:
	* X3DBrowserSelection.cpp: 

2013-12-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* BrowserSelection.h:
	* X3DBrowserEditor.h:
	* BrowserSelection.cpp:
	* X3DBrowserSelection.h:
	* OutlineTreeData.h:
	* X3DBrowserSelection.cpp:
	* OutlineTreeData.cpp: 

2013-12-03  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.ui:
	* BrowserWindow.cpp:
	* BrowserSelection.cpp:
	* OutlineRouteGraph.cpp: 

2013-12-03  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.ui:
	* X3DBrowserEditor.cpp:
	* BrowserSelection.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.ui:
	* X3DBrowserEditor.h:
	* BrowserSelection.cpp:
	* X3DBrowserEditor.cpp:
	* OutlineRouteGraph.h:
	* OutlineRouteGraph.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* LibraryView.h:
	* X3DBrowserEditor.h:
	* BrowserSelection.h:
	* ViewpointList.h:
	* OutlineEditor.h:
	* HistoryEditor.h:
	* MaterialEditor.h:
	* OutlineTreeModel.h:
	* X3DOutlineTreeView.h:
	* MotionBlurEditor.h:
	* OutlineTreeViewEditor.h:
	* NodePropertiesEditor.h: